Developer/src/objects/CampaignGoods__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>対象キャンペーン</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipLabel>キャンペーン商品</relationshipLabel>
        <relationshipName>RelatedCampaigns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GoodsImage__c</fullName>
        <formula>Goods__r.ImageUrl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商品画像</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoodsName__c</fullName>
        <formula>Goods__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商品名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goods__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売商品</label>
        <referenceTo>Goods__c</referenceTo>
        <relationshipLabel>キャンペーン商品</relationshipLabel>
        <relationshipName>CampaignGoods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NormailTotalAmount__c</fullName>
        <formula>StandardPrice__c * RedemptionAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>合計金額(通常)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PictureURL__c</fullName>
        <formula>Goods__r.PictureURL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商品画像URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RedemptionAmount__c</fullName>
        <label>購入個数</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SpecialPrice__c</fullName>
        <label>特別単価</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SpecialTotalAmount__c</fullName>
        <formula>SpecialPrice__c * RedemptionAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>合計金額(特別)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StandardPrice__c</fullName>
        <formula>Goods__r.StandardPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>通常単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>キャンペーン商品</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>キャンペーン商品名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>